--- a/vignettes/Vignette_ZCTA_Shapefile_Preparation.Rmd
+++ b/vignettes/Vignette_ZCTA_Shapefile_Preparation.Rmd
@@ -7,7 +7,7 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
-```{r setup, include=FALSE}
+```{r setup, include=FALSE, purl = FALSE}
 knitr::opts_chunk$set(
   echo = TRUE,
   eval = FALSE,
@@ -19,7 +19,7 @@ In this vignette, we show how we prepared the ZCTA shape data that can be downlo
 
 First, we load the packages that we will need for completing this task. 
 
-```{r, message = FALSE, warning = FALSE, eval = FALSE}
+```{r, message = FALSE, warning = FALSE, eval = FALSE, purl = FALSE}
 library(disperseR)
 library(data.table)
 library(sf)
@@ -27,13 +27,13 @@ library(sf)
 
 In case you have not yet created your project folder use the following command. 
 
-```{r, eval = FALSE}
+```{r, eval = FALSE, purl = FALSE}
 disperseR::create_dirs()
 ```
 
 We use use ZCTA shapefiles from the US census website [US census website](https://www2.census.gov/geo/tiger/GENZ2017/shp/cb_2017_us_zcta510_500k.zip). It is important to note that this website sometimes fails and the download should be postponed. 
 
-```{r, eval = FALSE}
+```{r, eval = FALSE, purl = FALSE}
 file <- file.path(zcta_dir, 'cb_2017_us_zcta510_500k.zip')
 url <- 'https://www2.census.gov/geo/tiger/GENZ2017/shp/cb_2017_us_zcta510_500k.zip'
 
@@ -45,14 +45,14 @@ if(!file.exists(file)){
 
 You can can load these files into your R session as follows. 
 
-```{r, eval = FALSE}
+```{r, eval = FALSE, purl = FALSE}
 zcta <- file.path(zcta_dir, 'cb_2017_us_zcta510_500k.shp') # define path
 zcta <- sf::st_read(zcta, quiet = TRUE)
 ```
 
 It is recommended to transform the ZCTA shapefile to a known projection to maintain consistency throughout the allocation process. Lat-lon projections are preferred, such as the [North American Albers Equal Area Conic](https://epsg.io/102008):
 
-```{r, eval = FALSE}
+```{r, eval = FALSE, purl = FALSE}
 p4s <- "+proj=aea +lat_1=20 +lat_2=60 +lat_0=40 +lon_0=-96 +x_0=0 +y_0=0 +ellps=GRS80 +datum=NAD83 +units=m"
 zcta <- sf::st_transform(zcta, crs = p4s)
 ```
