--- a/vignettes/Vignette_Planetary_Layers_Data_Preparation.Rmd
+++ b/vignettes/Vignette_Planetary_Layers_Data_Preparation.Rmd
@@ -7,7 +7,7 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
-```{r setup, include=FALSE, eval = FALSE}
+```{r setup, include=FALSE, eval = FALSE, purl = FALSE}
 knitr::opts_chunk$set(
   echo = TRUE,
   eval = FALSE,
@@ -20,7 +20,7 @@ In this vignette, we show how we prepared the monthly mean planetary boundary la
 
 First, we load the packages that we will need for completing this task. 
 
-```{r, message = FALSE, warning = FALSE, eval = FALSE}
+```{r, message = FALSE, warning = FALSE, eval = FALSE, purl = FALSE}
 library(disperseR)
 library(data.table)
 library(terra)
@@ -28,13 +28,13 @@ library(terra)
 
 In case you have not yet created your project folder use the following command. 
 
-```{r, eval = FALSE}
+```{r, eval = FALSE, purl = FALSE}
 disperseR::create_dirs()
 ```
 
 First we specify the file names and the url where we download the data from. We used the data available on the [NOAA PSL website](https://psl.noaa.gov/repository/entry/get/hpbl.mon.mean.nc?entryid=synth%3Ae570c8f9-ec09-4e89-93b4-babd5651e7a9%3AL05BUlIvTW9udGhsaWVzL21vbm9sZXZlbC9ocGJsLm1vbi5tZWFuLm5j).
 
-```{r, eval = FALSE}
+```{r, eval = FALSE, purl = FALSE}
 directory <- hpbl_dir
 file <- file.path(directory, 'hpbl.mon.mean.nc')
 url <- 'https://psl.noaa.gov/repository/entry/get/hpbl.mon.mean.nc?entryid=synth%3Ae570c8f9-ec09-4e89-93b4-babd5651e7a9%3AL05BUlIvTW9udGhsaWVzL21vbm9sZXZlbC9ocGJsLm1vbi5tZWFuLm5j'
@@ -43,7 +43,7 @@ url <- 'https://psl.noaa.gov/repository/entry/get/hpbl.mon.mean.nc?entryid=synth
 If the file does not exist in the folder download it as follows:
 
 
-```{r, eval = FALSE}
+```{r, eval = FALSE, purl = FALSE}
 if (!file.exists(file)){
   download.file(url = url, destfile = file)
 }
@@ -51,7 +51,7 @@ if (!file.exists(file)){
 
 Before reading in, it is necessary to set the system time zone to UTC so that the dates are formatted correctly in the raster files.
 
-```{r, eval = FALSE}
+```{r, eval = FALSE, purl = FALSE}
 old_tz <- Sys.getenv("TZ")
 Sys.setenv(TZ = "UTC")
 hpbl_rasterin <- suppressWarnings(terra::rast(file, subds = "hpbl"))
@@ -60,7 +60,7 @@ Sys.setenv(TZ = old_tz)
 
 The following is done to fix error in the dataset. For more information please see [here](https://stackoverflow.com/questions/56806894/raster-warning-message-in-cbindmi-vals-number-of-rows-of-result-is-not/56807318#56807318)
 
-```{r, eval = FALSE}
+```{r, eval = FALSE, purl = FALSE}
 terra::crs(hpbl_rasterin) <- "+proj=lcc +x_0=5632642.22547 +y_0=4612545.65137 +lat_0=50 +lon_0=-107 +lat_1=50"
 ```
 
