--- a/vignettes/Vignette_Units_Preparation.Rmd
+++ b/vignettes/Vignette_Units_Preparation.Rmd
@@ -7,7 +7,7 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
-```{r setup, include = FALSE}
+```{r setup, include = FALSE, purl = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
@@ -18,7 +18,7 @@ knitr::opts_chunk$set(
 
 Load packages 
 
-```{r, eval = FALSE}
+```{r, eval = FALSE, purl = FALSE}
 library(data.table)
 library(measurements)
 library(disperseR)
@@ -29,7 +29,7 @@ In this vignette we show how we prepare the units data attached to this function
 
 If you have not done so yet please create the project folders as follows. 
 
-```{r, eval = FALSE}
+```{r, eval = FALSE, purl = FALSE}
 disperseR::create_dirs()
 ```
 
@@ -41,7 +41,7 @@ We start by downloading the first datasets. We will download it to the process f
 
 ### Download and read in data
 
-```{r, eval = FALSE}
+```{r, eval = FALSE, purl = FALSE}
 directory <- proc_dir
 file <- file.path(directory, '2014fd_inputs_point.zip')
   
@@ -57,7 +57,7 @@ d_nei <- data.table::fread(file, skip = 18)
 
 The other data set is hosted on "https://dataverse.harvard.edu/api/access/datafile/3086908?gbrecs=true". We specify this location and download it the same way. 
 
-```{r, eval = FALSE}
+```{r, eval = FALSE, purl = FALSE}
 url <- "https://dataverse.harvard.edu/api/access/datafile/3086908?gbrecs=true"
   
 directory <- proc_dir
@@ -76,7 +76,7 @@ d_ampd2 <- d_ampd
 
 ### Manipulation 
 
-```{r, eval = FALSE}
+```{r, eval = FALSE, purl = FALSE}
 d_nei_unique <- unique(d_nei[, .(
   facility_name,
   Facility.ID..ORISPL. = oris_facility_code,
@@ -95,11 +95,11 @@ d_nei_unique <- d_nei_unique[, Facility.ID..ORISPL. := as.numeric(d_nei_unique$F
 
 Here we show you how to prepare the 2005 set but you can choose other years. 
 
-```{r, eval = FALSE}
+```{r, eval = FALSE, purl = FALSE}
 d_ampd <- d_ampd[Year == 2005][, V1 := NULL]
 ```
 
-```{r, eval = FALSE}
+```{r, eval = FALSE, purl = FALSE}
 d_ampd_subset <- d_ampd[Fuel1.IsCoal == 1][, .(
   Facility.ID..ORISPL.,
   Unit.ID,
@@ -142,7 +142,7 @@ head(d_ampd_annual)
 ```
 
 
-```{r, eval = FALSE}
+```{r, eval = FALSE, purl = FALSE}
 ampd <- merge(d_ampd_annual,
   d_nei_unique,
   by = c("Facility.ID..ORISPL.", "Unit.ID"),
@@ -166,7 +166,7 @@ names(ampd)
 
 Many of the units in the provided datasets do not have stack height data. In these cases, it is suggested in [Henneman et al. (2019)](https://doi.org/10.1016/j.atmosenv.2019.01.043) to fill with the average stack height of all units. We do that and create a variable that flags if the height was imputed. 
 
-```{r, eval = FALSE}
+```{r, eval = FALSE, purl = FALSE}
 # create flag if Height is missing
 ampd <- ampd[, inputed := 0]
 ampd$inputed[is.na(ampd$Height)] <- 1
@@ -176,13 +176,13 @@ ampd$Height[is.na(ampd$Height)] <- mean(ampd$Height, na.rm = T)
 
 There are duplicates from the NEI database, where for the same stack  (= same facility + same unit) may be reported several times for the same pollutant with different stack info.
 
-```{r, eval = FALSE}
+```{r, eval = FALSE, purl = FALSE}
 ampd <- unique(ampd, by = "ID")
 ```
 
 Delete variables we do not need.
 
-```{r, eval = FALSE}
+```{r, eval = FALSE, purl = FALSE}
 ampd <- ampd %>% dplyr::select(-c(Diam, Velocity, Temp))
 ```
 
@@ -194,7 +194,7 @@ The `ampd` data are present in your environment should be now ready to use. You 
 This works however we wanted to attached all the years in the same file. We write a function to get these data. 
 
 
-```{r, eval = FALSE}
+```{r, eval = FALSE, purl = FALSE}
 get_units_data <- function(year, d_ampd) {
   
   d_ampd <- d_ampd[Year == year][, V1 := NULL]
@@ -272,12 +272,12 @@ get_units_data <- function(year, d_ampd) {
 
 Vectors of years that we will be adding to our data.
 
-```{r, eval = FALSE}
+```{r, eval = FALSE, purl = FALSE}
 vector_years<-c(1995:2015)
 ```
 
 Run the function for all the years and combine results.
-```{r, eval = FALSE}
+```{r, eval = FALSE, purl = FALSE}
 units <- data.table::setDF(data.table::rbindlist(lapply(vector_years, 
   get_units_data, 
   d_ampd=d_ampd2)))
