Update docs: URLs, NEWS.md with latest fixes
- Updated all GitHub URLs to point to fork (josbyb2020/disperseR-test2026)
- Added recent bug fixes to NEWS.md:
  - get_yearmon leading zero fix
  - PBL URL update
  - dispersion_read improvements
  - Input validation additions
  - yearmonth formatting fix

--- a/README.Rmd
+++ b/README.Rmd
@@ -108,5 +108,5 @@ Use `get_data()` to download most inputs automatically.
 ```
 Henneman, L., Choirat, C., & Garbulinska, M. (2019). disperseR:
 Run HYSPLIT many times in parallel, aggregate to zip code level.
-R package version 0.2.0. https://github.com/lhenneman/disperseR
+R package version 0.2.0. https://github.com/josbyb2020/disperseR-test2026
 ```
