Add validate_pipeline(), unify splitr references, improve replication robustness
- Add validate_pipeline() for quick output summaries and sanity checks
- Standardize on lowercase 'splitr' throughout (remove SplitR fallback)
- calculate_exposure() now uses cached exp_dir from create_dirs()
- Replication scripts: add CRS to PBL fallback, fix flow control
- README: add support matrix, setup checklist, performance tips
- Exclude replication/ and assessment doc from build

--- a/README.Rmd
+++ b/README.Rmd
@@ -36,7 +36,7 @@ remotes::install_github("josbyb2020/disperseR-test2026")
 ```
 
 If you plan to run HYSPLIT (dispersion or trajectories) or use GDAS1 meteorology,
-install SplitR from GitHub for bundled binaries, or provide your own HYSPLIT
+install `splitr` from GitHub for bundled binaries, or provide your own HYSPLIT
 binaries via `binary_path` and `parhplot_path`.
 
 Windows users who build vignettes will need Rtools.
@@ -85,10 +85,40 @@ Use `get_data()` to download most inputs automatically.
 - `create_dirs()` defaults to a session temp directory (CRAN-safe). For
   persistent projects, pass an explicit path (especially on Windows or
   network drives).
-- HYSPLIT binaries are required for dispersion runs. If SplitR is installed,
+- HYSPLIT binaries are required for dispersion runs. If `splitr` is installed,
   disperseR will use its bundled binaries; otherwise provide `binary_path` and
   `parhplot_path` to `hysplit_dispersion()`.
 - Windows uses socket clusters (`parLapply`). Set `mc.cores` to control parallelism.
+
+## Support matrix
+
+| Platform | R | HYSPLIT binaries | Notes |
+|---|---|---|---|
+| macOS (Intel) | >= 4.1 | splitr | Supported; works out of the box |
+| macOS (Apple Silicon) | >= 4.1 | splitr via Rosetta or custom | Install Rosetta or supply `binary_path`/`parhplot_path` |
+| Windows 10/11 | >= 4.1 | splitr | Supported; uses socket clusters |
+| Linux x86_64 | >= 4.1 | splitr | Supported; ensure system libs for sf/terra |
+| Linux ARM/aarch64 | >= 4.1 | Custom | splitr binaries not provided; supply your own |
+
+Other OS versions may work but are not guaranteed. System libraries required by
+sf/terra (GDAL/GEOS/PROJ) must be available on the host system.
+
+## Setup checklist (minimize friction)
+
+- Run `create_dirs()` in every new R session before calling `get_data()`.
+- Use `get_data(data = "all", ...)` to fetch ZCTA, crosswalk, PBL, and met data.
+- Install `splitr` for bundled HYSPLIT binaries, or set `binary_path` and
+  `parhplot_path` explicitly.
+- Run `check_spatial_packages()` to confirm sf/terra readiness.
+- Run `validate_pipeline()` after a run to summarize outputs and catch gaps.
+
+## Performance tips
+
+- Keep `mc.cores` low on laptops; increase on servers via
+  `options(disperseR.mc.cores = ...)`.
+- Store project data on a local SSD to reduce I/O overhead.
+- Use short date ranges for iteration; expand to full periods once stable.
+- Reuse existing outputs with `overwrite = FALSE`.
 
 ## Documentation
 
