Improve Windows compatibility, error clarity, and robustness
Major improvements:

- Windows path handling: Normalize long paths to short 8.3 format to avoid
  path length limits; handle proper path separators in shell commands.

- Download resilience: Implement method fallback (libcurl → wininet → auto)
  for both get_data() and get_met_reanalysis() on Windows; add proxy support
  with options(download.file.method = "wininet").

- Error messages: Enhance link_all_units() and run_disperser_parallel()
  validation to provide clear guidance (e.g., how to get required data,
  what values are valid).

- Windows SpatRaster handling: Detect and warn when terra::SpatRaster objects
  are passed to parallel code on Windows; automatically fall back to mc.cores=1
  since socket clusters cannot serialize SpatRaster.

- Config tracking: Store duration_run_hours and source in last_run_config.rds
  after each run so downstream phases (e.g., linking) can auto-detect the
  correct duration.

- Replication robustness: Add guards for missing files (02_single_run.R,
  03_batch_run.R); improve README troubleshooting with Windows-specific notes
  on HYSPLIT binary quarantine and GIS file generation.

- Docs: Update REFERENCE.md with monthly_maps naming convention, add
  Windows proxy and SpatRaster notes.

- Version: Bump to 0.2.1 to reflect Windows reliability improvements.

Replication folder now includes docs/REFERENCE.md with comprehensive API
reference, parameter recommendations, and troubleshooting guide.

--- a/replication/report.Rmd
+++ b/replication/report.Rmd
@@ -71,10 +71,9 @@ if (file.exists("outputs/logs/batch_units.rds")) {
     cat("Total units in analysis:", nrow(units), "\n")
     cat("Total SOx emissions:", sum(units$SOx, na.rm = TRUE), "tons\n")
 
-    # Summary by state
-    state_summary <- aggregate(SOx ~ State, data = units, FUN = sum)
-    state_summary <- state_summary[order(-state_summary$SOx), ]
-    kable(head(state_summary, 10), caption = "Top 10 States by SOx Emissions")
+    # Show top units by SOx (disperseR::units has no State column)
+    top_units <- units[order(-units$SOx), c("ID", "Latitude", "Longitude", "SOx", "Height")]
+    kable(head(top_units, 10), caption = "Top 10 Units by SOx Emissions")
 } else {
     cat("Units data not yet generated. Run 03_batch_run.R first.")
 }
