--- a/README.Rmd
+++ b/README.Rmd
@@ -174,6 +174,19 @@ Install system libraries for sf/terra:
 - macOS: `brew install gdal geos proj`
 - Ubuntu: `sudo apt install libgdal-dev libgeos-dev libproj-dev`
 
+### Linux: libgfortran.so.3 not found
+
+The HYSPLIT binaries in splitr require an older Fortran runtime. On newer Linux 
+distros (Ubuntu 22.04+), install the compatibility library:
+
+```bash
+sudo apt install libgfortran5
+# If that doesn't work, you may need to compile HYSPLIT from source
+```
+
+Alternatively, download and compile HYSPLIT from [NOAA ARL](https://www.ready.noaa.gov/HYSPLIT.php) 
+and provide `binary_path` and `parhplot_path` to bypass splitr.
+
 ## Project structure
 
 After running `create_dirs()` and `get_data()`, your project looks like:
